Styling the landing pages

--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -1,30 +1,27 @@
 {% for example in examples %}
     <div class="section">
-        <div class="row">
-            <div class="col s12 m12 l12">
+        <div class="row auto-eg-padding">
+			<div class=" row twelve columns">
                 <h3>{{ example.name }}</h3>
-            </div>
-            <div class="col s12 m12 l6">
-                <div class="z-depth-1">
-                    <pre>{{ example.content }}</pre>
-                </div>
-                {% if example.description %}
-                    <blockquote>
-                        {{ example.description }}
-                    </blockquote>
-                {% endif %}
-            </div>
-
-            <div class="col s12 m12 l6">
-                <div >
-                    <iframe src="{{ example.plot_url }}" style="width: 100%; height: 550px; border: none;"></iframe>
-                    <!--
-                    <a href="{{ example.plot_url }}" target="_blank" title="" style="display: block; text-align: center;"><img src="{{ example.plot_url }}.png" alt="" style="max-width: 100%;width: 500px;"  width="500" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-                    <script data-plotly="{{ example.plot_url | replace:'https://plot.ly/~',''}}" src="https://plot.ly/embed.js" async></script>
-                    -->
-                </div>
-            </div>
-
+			</div>
+			<div class="row">
+				<div class="six columns">
+					<div class="z-depth-1">
+						<pre>{{ example.content }}</pre>
+					</div>
+					{% if example.description %}
+						<blockquote>
+							{{ example.description }}
+						</blockquote>
+					{% endif %}
+				</div>
+				<div class="six columns">
+					<div class="border">
+						<iframe src="{{ example.plot_url }}" style="width: 100%; height: 550px; border: none;"></iframe>
+					</div>
+				</div>
+			</div>
         </div>
+
     </div>
 {% endfor %}
