--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,71 @@
-<footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Plotly</h5>
-            <p class="grey-text text-lighten-4">Plotly is the easiest and fastest way to graph and share your data online.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Resources</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Documentation</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">User Guides</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">IPython Notebooks</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Plotly On-Premise</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-        2015 Copyright
-        <a class="grey-text text-lighten-4 right" href="#!">Terms and Privacy</a>
-        </div>
-      </div>
+<footer>
+	<div class="row footerarea footer-top">
+		<div class="one column footcolumn space"> </div>
+		<div class="two columns footcolumn respfooter">
+			<h6 class="footer-heading">API</h6>
+			<ul>
+				<li><a  href="https://plot.ly/api/" target="_self">Documentation</a></li>
+				<li><a  href="https://plot.ly/api/" target="_self">API Libraries</a></li>
+				<li><a  href="https://plot.ly/rest/" target="_self">REST APIs</a></li>
+				<li><a  href="https://plot.ly/javascript-graphing-library/" target="_self">Plotly.js</a></li>
+				<li><a  href="https://plot.ly/workshop/" target="_self">Hardware</a></li>
+			</ul>
+		</div>
+		<div class="two columns footcolumn respfooter">
+			<h6 class="footer-heading">About Us</h6>
+			<ul>
+				<li><a href="https://plot.ly/company/team/" target="_self">Team</a></li>
+				<li><a href="https://plot.ly/company/jobs/" target="_self">Careers</a></li>
+				<li><a href="http://blog.plot.ly" target="_blank">Plotly Blog</a></li>
+				<li><a href="http://moderndata.plot.ly" target="_blank">Modern Data</a></li>
+			</ul>
+		</div>
+		<div class="two columns footcolumn respfooter">
+			<h6 class="footer-heading">Help</h6>
+			<ul>
+				<li><a href="https://plot.ly/learn/" target="_self">Knowledge Base</a></li>
+				<li><a href="https://plot.ly/benchmarks/" target="_self">Benchmarks</a></li>
+				<li><a href="https://plot.ly/workshop/" target="_self">Workshop</a></li>
+			</ul>
+		</div>
+		<div class="two columns footcolumn respfooter">
+			<h6 class="footer-heading">Solutions</h6>
+			<ul>
+				<li><a href="https://plot.ly/product/plans/" target="_self">Plans &amp; Pricing</a></li>
+				<li><a href="https://plot.ly/product/enterprise/" target="_self">Enterprise</a></li>
+				<li><a href="https://plot.ly/online-graphing-and-statistics-for-educators/" target="_self">Education</a></li>
+				<li><a href="https://plot.ly/product/plotlyjs/" target="_self">Plotly.js</a></li>
+			</ul>
+		</div>
+		<div class="two columns footcolumn respfooter">	
+     		<h6 class="footer-heading">Connect</h6>
+			<ul class="plotly-social-media-small">
+				<li><a href="//twitter.com/plotlygraphs" target="_blank"><i class="icon-twitter social_icon"></i></a></li>
+				<li><a href="//www.facebook.com/Plotly" target="_blank"><i class="icon-facebook social_icon"></i></a></li>
+				<li><a href="//github.com/plotly" target="_blank"><i class="icon-github social_icon"></i></a></li>
+				<li><a href="//linkedin.com/company/plotly" target="_blank"><i class="icon-linkedin social_icon"></i></a></li>
+				<li><a href="//plus.google.com/+PlotLy" target="_blank"><i class="icon-google-plus  social_icon"></i></a></li>
+			</ul>
+		</div>
+		<div class="one column footcolumn"></div>
+	</div>
+	
+	<div class="row footerarea footer-bottom">
+		<div class="one column footcolumn space"> </div>
+		<div class="four columns footcolumn"><p>Copyright &copy; 2015 Plotly. All rights reserved.</p></div>
+		<div class="two columns footcolumn"><a href="https://plot.ly/terms-of-service/" target="_blank" ><p>Terms of Service</p></a></div>
+		<div class="two columns footcolumn"><a href="https://plot.ly/privacy/" target="_blank"><p>Privacy Policy</p></a></div>
+		
+		
+	</div>
+
 </footer>
+
+
+<script type='text/x-mathjax-config'>
+MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true}});
+</script>
+
+<script type='text/javascript' src='//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML%2CSafe.js&#038;ver=4.1'></script>
+
+
