--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-<!--	<link rel="stylesheet" href="/css/materialize.css">   -->
-    <link rel="stylesheet" href="/css/api_docs.css">
 	<body>
     {% include header.html %}
+	
 	{% include navigation-bar.html %}
+	<div class="sectionseparator_bg">
 		
 
 		<div class="container">
-			<h1 class="centered">{{page.name}}</h1>
 			{{ content }}
 			
 			
 		</div>
+	</div>
     {% include footer.html %}
 	</body>
+	
 </html>
