navigation bar and seo updates

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -83,7 +83,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.name == "Text and Annotations" or page.permalink contains "setting-graph-size" or page.name == "Axes" or page.name == "Text and Font Styling" or page.name == "Setting the Title, Legend Entries, and Axis Titles" or page.name == "LaTeX" or page.name == "Legends"" or page.name == "Setting Graph Size" %}
-					<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+					<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -95,7 +95,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.permalink contains "privacy" or page.permalink contains "file-options" %}
-				<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -107,7 +107,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.permalink contains "stft" or page.permalink contains "fft" %}
-				<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -119,7 +119,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.permalink contains "high-dimension-data" or page.permalink contains "streaming-data" or page.permalink contains "range-slider" or page.permalink contains "style-controls" %}
-						<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
@@ -131,7 +131,7 @@
 			{% for page in languagelist %}
 			<ul class="no-list-style">
 				{% if page.permalink contains "callbacks" %}
-					<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+					<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			</ul>
 			{% endfor %}
@@ -143,7 +143,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.permalink contains "static-image-export" or page.permalink contains "embedding-plotly-graphs-in-HTML" or page.permalink contains "get-requests" or page.permalink contains "static-image-export" or page.permalink contains "shiny-tutorial" %}
-							<li><a class="no-list-style" href="{{page.permalink}}">{{page.name}}<a></li>
+							<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
