--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,10 +9,16 @@
 		
 
 		<div class="container">
-			<h1 class="centered">{{page.name}}</h1>
+			<h1 class="centered">{{page.name}} in {{page.language | capitalize}}</h1>
+			{% include lang-navigation.html %}
+			
+			<div class="row">
+			
+			
+	
 			{{ content }}
 			
-			
+			</div>
 		</div>
     {% include footer.html %}
 	</body>
