--- a/css/layout_block.css
+++ b/css/layout_block.css
@@ -186,6 +186,17 @@ NAVIGATION BAR STYLING
 	border-bottom: 1px solid #ccc;
 }
 
+/***********************
+LANGUAGE NAVIGATION BAR STYLING
+***********************/
+.lang_nav{
+	min-width: 100%;
+	margin: auto;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
 /*****************************
 RESPONSIVE TABLE
 *****************************/
