--- a/css/modules.css
+++ b/css/modules.css
@@ -640,6 +640,10 @@ TUTORIAL STYLING
 	max-height: 300px;
 }
 
+h3 code{
+	padding: .2rem .2rem;;
+}
+
 /**************
 API SPLASH
 **************/
@@ -734,4 +738,59 @@ API THUMNAIL LIST
 
 .api-thum-img{
 	width: 60px;
+}
+
+/***********************
+NAVIGATION BAR STYLING
+***********************/
+.lang_nav_button{
+	background-color: #8d97b0;
+    border: medium none;
+    border-radius: 2px;
+    color: #f8f8f9;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0 5px;
+    padding: 5px 1em;
+    text-transform: uppercase;
+    white-space: nowrap;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+	vertical-align: middle;
+}
+.lang_nav_button:hover{
+	background-color: #6a758b;
+}
+.lang_nav_button a{
+		color: #ffffff;
+		font-weight: 400;
+		text-decoration: none;
+}
+
+@media (max-width: 550px) {
+	.lang_nav_button {
+		min-width: 100%;
+	    margin: 5px 0;
+		padding: 5px 0;
+	}
+}
+
+@media (max-width: 700px) {
+	.lang_nav_button {
+		margin: 0 0px 10px;
+	}
+}
+
+.lang_nav_thum{
+	max-width: 20px;
+	vertical-align: middle;
+	display: inline;
+	padding-right: 5px;
+}
+
+.lang_nav_act{
+	background-color: #143060;
 }
