--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-<!--	<link rel="stylesheet" href="/css/materialize.css">   -->
-    <link rel="stylesheet" href="/css/api_docs.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/api_docs.css">
 	<body>
     {% include header.html %}
 	{% include navigation-bar.html %}
