Image src fixes

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -15,7 +15,7 @@
 			{% if page.name == "plot | Line Charts" or page.permalink contains "scatter" or page.name == "Line and Scatter Plots" or page.name == "Bar Charts" or page.name == "Box Plots" or page.name == "Bubble Charts" or page.name == "Contour Plots" or page.name == "Filled Area Plots" or page.name == "Error Bars" or page.name == "Heatmaps" or page.name == "Histograms" or page.name == "2D Histograms" or page.name == "Polar Charts" or page.name == "Time Series" or page.name == "Multiple Chart Types" or page.name == "Log Plots" or page.name == "Network Graphs" or page.name == "Sparse Matrix Visualizations" or page.name == "Log Plots" or page.name == "3D Scatter Plots" or page.name == "3D Surface Plots" or page.name == "3D Line Plots" or page.name == "Line Shapes" or page.name == "Themes" or page.name == "Functions" or page.name == "Maps" or page.name == "Facet" or page.name == "geom_polygon" %}
 					<a href="/{{page.permalink}}">
 						<div class="alltutcol">
-							<img class="thumbnail" src="{{page.thumbnail}}" >
+							<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
 							<div class="titlecenter">
 										<h5 class="centered"> {{page.name}} </h5>
 							</div>
@@ -32,7 +32,7 @@
 				{% if page.name == "Multiple Axes" or page.name == "Subplots" or page.name == "Inset Plots" %}
 						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" src="{{page.thumbnail}}" >
+								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
@@ -49,7 +49,7 @@
 				{% if page.name  == 'Streaming' %}
 						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" src="{{page.thumbnail}}" >
+								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
@@ -83,7 +83,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.name == "Text and Annotations" or page.permalink contains "setting-graph-size" or page.name == "Axes" or page.name == "Text and Font Styling" or page.name == "Setting the Title, Legend Entries, and Axis Titles" or page.name == "LaTeX" or page.name == "Legends"" or page.name == "Setting Graph Size" %}
-					<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+					<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -95,7 +95,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.permalink contains "privacy" or page.permalink contains "file-options" %}
-				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -107,7 +107,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.permalink contains "stft" or page.permalink contains "fft" %}
-				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -119,7 +119,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.permalink contains "high-dimension-data" or page.permalink contains "streaming-data" or page.permalink contains "range-slider" or page.permalink contains "style-controls" %}
-						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+						<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
@@ -131,7 +131,7 @@
 			{% for page in languagelist %}
 			<ul class="no-list-style">
 				{% if page.permalink contains "callbacks" %}
-					<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+					<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 				{% endif %}
 			</ul>
 			{% endfor %}
@@ -143,7 +143,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.permalink contains "static-image-export" or page.permalink contains "embedding-plotly-graphs-in-HTML" or page.permalink contains "get-requests" or page.permalink contains "static-image-export" or page.permalink contains "shiny-tutorial" %}
-							<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}<a></li>
+							<li><a class="no-list-style" href="{{ site.baseurl }}{{page.permalink}}">{{page.name}}<a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
