--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,5 +1,5 @@
 <div class="navigation-bar">
-<p class="align-left padding_left"><a href="/api/"> API libraries / </a><a href="/{{page.language}}">{{page.language}}</a> / {{page.name}}</p>
+<p class="align-left padding_left"><a href="{{ site.baseurl }}/documentation/"> API libraries / </a><a href="{{ site.baseurl }}/{{page.language}}">{{page.language}}</a> / {{page.name}}</p>
 	<div class="float-right">
 		<a href="https://github.com/plotly">Fork on GitHub</a>
 	</div>
