--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -28,7 +28,7 @@
 		<div class="lang_nav_button {{pyclass}}"><a href="{{ site.baseurl }}/python{{page_type}}"><img src="{{ site.baseurl }}/images/python-small.png" alt="python" class="lang_nav_thum">PYTHON</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "matlab" %}
-		<div class="lang_nav_button {{matclass}}"><a href="{{ site.baseurl }}/matlab{{page_type}}"><img src="{{ site.baseurl }}/images/matlab-small.png" alt="matlab" class="lang_nav_thum">MATLAB</a></div>
+		<div class="lang_nav_button {{matclass}}"><a href="{{ site.baseurl }}/matlab{{page_type}}"><img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum">MATLAB</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "r" %}
 		<div class="lang_nav_button {{rclass}}"><a href="{{ site.baseurl }}/r{{page_type}}"><img src="{{ site.baseurl }}/images/r-small.png" alt="r" class="lang_nav_thum">R</a></div>
