reference and guide update

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,5 +1,5 @@
 <!-- SEO Tags - title, meta_description -->
-    <title>{% if page.name == "" or page.name == nil %}plotly{% else %}{{page.name}}{% endif %}</title>
+    <title>{% if page.name == "" or page.name == nil %}Plotly - {{page.title}}{% else %}{{page.name}}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}Plotly is the easiest way to graph and share your data.{% endif %}">
 
 <!-- Bing tags -->
