bug fix updates

--- a/css/modules.css
+++ b/css/modules.css
@@ -768,6 +768,9 @@ NAVIGATION BAR STYLING
 		color: #ffffff;
 		font-weight: 400;
 		text-decoration: none;
+		display: inline block;
+		min-width: 100%;
+		min-height: 100%;
 }
 
 @media (max-width: 550px) {
