Grid and language button fix

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -12,8 +12,16 @@
 <h3>Chart Types</h3>
 	<div class="row">
 		{% for page in languagelistimg %}
-			{% if page.name == "plot | Line Charts" or page.permalink contains "scatter" or page.name == "Line and Scatter Plots" or page.name == "Bar Charts" or page.name == "Box Plots" or page.name == "Bubble Charts" or page.name == "Contour Plots" or page.name == "Filled Area Plots" or page.name == "Error Bars" or page.name == "Heatmaps" or page.name == "Histograms" or page.name == "2D Histograms" or page.name == "Polar Charts" or page.name == "Time Series" or page.name == "Multiple Chart Types" or page.name == "Log Plots" or page.name == "Network Graphs" or page.name == "Sparse Matrix Visualizations" or page.name == "Log Plots" or page.name == "3D Scatter Plots" or page.name == "3D Surface Plots" or page.name == "3D Line Plots" or page.name == "Line Shapes" or page.name == "Themes" or page.name == "Functions" or page.name == "Maps" or page.name == "Facet" or page.name == "geom_polygon" %}
-					<a href="{{ site.baseurl }}/{{page.permalink}}">
+			{% if page.name == "plot | Line Charts" or page.permalink contains "scatter" or page.name == "Line and Scatter Plots" or page.name == "Bar Charts" or page.name == "Box Plots" or page.name == "Bubble Charts" or page.name == "Contour Plots" or page.name == "Filled Area Plots" or page.name == "Error Bars" or page.name == "Heatmaps" or page.name == "Histograms" or page.name == "2D Histograms" or page.name == "Polar Charts" or page.name == "Time Series" or page.name == "Multiple Chart Types" or page.name == "Log Plots" or page.name == "Network Graphs" or page.name == "Sparse Matrix Visualizations" or page.name == "Log Plots" or page.name == "3D Scatter Plots" or page.name == "3D Surface Plots" or page.name == "3D Line Plots" or page.name == "Line Shapes" or page.name == "Themes" or page.name == "Functions" or page.name == "Maps" or page.name == "Facet" or page.name == "geom_polygon" %}				
+				{% assign loopindex = forloop.index | modulo: 5 %}
+						{% if loopindex == 1 %}
+							<div class="five-column-clear"></div>
+						{% endif %}		
+				{% assign loopindexthree = forloop.index | modulo: 3 %}
+						{% if loopindexthree == 1 %}
+							<div class="three-column-clear"></div>
+						{% endif %}	
+			<a href="{{ site.baseurl }}/{{page.permalink}}">
 						<div class="alltutcol">
 							<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
 							<div class="titlecenter">
@@ -30,6 +38,14 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.name == "Multiple Axes" or page.name == "Subplots" or page.name == "Inset Plots" %}
+					{% assign loopindex = forloop.index | modulo: 5 %}
+						{% if loopindex == 1 %}
+							<div class="five-column-clear"></div>
+						{% endif %}		
+					{% assign loopindexthree = forloop.index | modulo: 3 %}
+						{% if loopindexthree == 1 %}
+							<div class="three-column-clear"></div>
+						{% endif %}	
 						<a href="{{ site.baseurl }}/{{page.permalink}}">
 							<div class="alltutcol">
 								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
@@ -47,6 +63,14 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.name  == 'Streaming' %}
+					{% assign loopindex = forloop.index | modulo: 5 %}
+						{% if loopindex == 1 %}
+							<div class="five-column-clear"></div>
+						{% endif %}		
+					{% assign loopindexthree = forloop.index | modulo: 3 %}
+						{% if loopindexthree == 1 %}
+							<div class="three-column-clear"></div>
+						{% endif %}	
 						<a href="{{ site.baseurl }}/{{page.permalink}}">
 							<div class="alltutcol">
 								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
