--- a/css/modules.css
+++ b/css/modules.css
@@ -761,19 +761,23 @@ NAVIGATION BAR STYLING
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 	vertical-align: middle;
 }
+.lang_nav_button-div{
+	display: inline-block;
+}
+
 .lang_nav_button:hover{
 	background-color: #6a758b;
 }
-.lang_nav_button a{
+.lang_nav_button{
 		color: #ffffff;
 		font-weight: 400;
 		text-decoration: none;
-		display: inline block;
-		min-width: 100%;
-		min-height: 100%;
 }
 
 @media (max-width: 550px) {
+	.lang_nav_button-div {
+		min-width: 100%;
+		}
 	.lang_nav_button {
 		min-width: 100%;
 	    margin: 5px 0;
@@ -796,4 +800,21 @@ NAVIGATION BAR STYLING
 
 .lang_nav_act{
 	background-color: #143060;
+}
+
+
+/***********************
+LANGUAGE INDEX PAGE STYLING
+***********************/
+
+.five-column-clear{
+	clear: both;}
+.three-column-clear{
+	display: none;}
+	
+@media (max-width: 750px) {
+	.five-column-clear{
+		display: none;}
+	.three-column-clear{
+		clear: both;}
 }
