--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -25,28 +25,25 @@
 
 {% for page in allpages %}
 	{% if page.permalink contains {{page_type}} and page.language == "python" %}
-		<div class="lang_nav_button {{pyclass}}"><a href="{{ site.baseurl }}/python{{page_type}}"><img src="{{ site.baseurl }}/images/python-small.png" alt="python" class="lang_nav_thum">PYTHON</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{pyclass}}" href="{{ site.baseurl }}/python{{page_type}}"><img src="{{ site.baseurl }}/images/python-small.png" alt="python" class="lang_nav_thum">PYTHON</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "matlab" %}
-		<div class="lang_nav_button {{matclass}}"><a href="{{ site.baseurl }}/matlab{{page_type}}"><img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum">MATLAB</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{matclass}}" href="{{ site.baseurl }}/matlab{{page_type}}"><img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum">MATLAB</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "r" %}
-		<div class="lang_nav_button {{rclass}}"><a href="{{ site.baseurl }}/r{{page_type}}"><img src="{{ site.baseurl }}/images/r-small.png" alt="r" class="lang_nav_thum">R</a></div>
-	{% endif %}
-	{% if page.permalink contains {{page_type}} and page.language ==  "node_js" %}
-		<div class="lang_nav_button {{nodejsclass}}"><a href="{{ site.baseurl }}/node_js{{page_type}}"><img src="{{ site.baseurl }}/images/nodejs-small.png" alt="node.js" class="lang_nav_thum">NODE.JS</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{rclass}}" href="{{ site.baseurl }}/r{{page_type}}"><img src="{{ site.baseurl }}/images/r-small.png" alt="r" class="lang_nav_thum">R</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "julia" %}
-		<div class="lang_nav_button {{juliaclass}}"><a href="{{ site.baseurl }}/julia{{page_type}}"><img src="{{ site.baseurl }}/images/julia.png" alt="julia" class="lang_nav_thum">JULIA</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{juliaclass}}" href="{{ site.baseurl }}/julia{{page_type}}"><img src="{{ site.baseurl }}/images/julia.png" alt="julia" class="lang_nav_thum">JULIA</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "matplotlib" %}
-		<div class="lang_nav_button {{matplotclass}}"><a href="{{ site.baseurl }}/matplotlib{{page_type}}"><img src="{{ site.baseurl }}/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">MATPLOTLIB</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{matplotclass}}" href="{{ site.baseurl }}/matplotlib{{page_type}}"><img src="{{ site.baseurl }}/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">MATPLOTLIB</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "ggplot2" %}
-		<div class="lang_nav_button {{ggplotclass}}"><a href="{{ site.baseurl }}/ggplot2{{page_type}}"><img src="{{ site.baseurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">GGPLOT2</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{ggplotclass}}" href="{{ site.baseurl }}/ggplot2{{page_type}}"><img src="{{ site.baseurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">GGPLOT2</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "plotly_js" %}
-		<div class="lang_nav_button {{plotjsclass}}"><a href="{{ site.baseurl }}/plotly_js{{page_type}}"><img src="{{ site.baseurl }}/images/plotly-js.png" alt="plotly.js" class="lang_nav_thum">PLOTLY.JS</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="{{ site.baseurl }}/plotly_js{{page_type}}">{ } pltoly.js</a></div>
 	{% endif %}
 {% endfor %}
 
