--- a/css/modules.css
+++ b/css/modules.css
@@ -767,9 +767,9 @@ NAVIGATION BAR STYLING
 
 .lang_nav_button:hover{
 	background-color: #6a758b;
+	color: #f8f8f9;
 }
 .lang_nav_button{
-		color: #ffffff;
 		font-weight: 400;
 		text-decoration: none;
 }
