--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,4 +68,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], processEsc
 
 <script type='text/javascript' src='//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML%2CSafe.js&#038;ver=4.1'></script>
 
+	<!-- Image Hover Script -->
+  	<script src="{{ site.baseurl }}/javascripts/imghover.js"></script>
+
 
