--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
     {% include header.html %}
 	{% include navigation-bar.html %}
 		
-
+	<div class="sectionseparator_bg">
 		<div class="container">
 			<h1 class="centered">{{page.name}} in {{page.language | capitalize}}</h1>
 			{% include lang-navigation.html %}
@@ -19,6 +19,7 @@
 			
 			</div>
 		</div>
+	</div>
     {% include footer.html %}
 	</body>
 </html>
