--- a/css/api_docs.css
+++ b/css/api_docs.css
@@ -5,7 +5,9 @@
 
 .z-depth-1{
 /*box-shadow: inset 0px 0px 1em rgba(204, 204, 204, 0.5); */
-border: 1px solid #ccc;}
+border: 1px solid #ccc;
+background-color: #ffffff;
+}
 
 code, kbd, pre, samp {
   font-family: monospace, monospace;
