--- a/css/layout_block.css
+++ b/css/layout_block.css
@@ -115,7 +115,7 @@ PAGE-WIDE SECTION LAYOUT
 	    background-color: #FFFFFF;
 }
 .sectionseparator_bg{
-	background-color: #EEEEEE;
+	background-color: #F8F8F9;
 }
 
 /************************
