--- a/css/modules.css
+++ b/css/modules.css
@@ -160,25 +160,21 @@ NAVIGATION BAR STYLING
 ***********************/
 
 .navigation-bar p, .navigation-bar a {
-    font-weight: 600;
+    font-weight: bold;
     line-height: 40px;
     text-decoration: none;
 	display: inline;
-	color: #69738a;
+	font-size: 13px
+
 }
-.navigation-bar a:hover{
+.navigation-bar a{
 	color: #447bdc;
 	}
 .navigation-bar p{
 	float: left;
+	color: #69738a;
 	}
-.navigation-bar .float-right{
-	margin-right: 70px;
-	}
-	
-@media (max-width: 1100px) {
-	.navigation-bar .float-right{
-		margin-right: 40px;}
+
 }
 @media (max-width: 400px) {
 	.navigation-bar p, .navigation-bar a {
@@ -189,6 +185,11 @@ NAVIGATION BAR STYLING
 		display: none;}
 }
 
+#forklink{
+font-weight: 300;
+font-family: "Open sans",verdana,arial,sans-serif;
+font-size: 14px;
+}
 
 /*****************************
 ALL TUTORIALS SECTION STYLING
@@ -432,153 +433,43 @@ TUTORIAL HOME PAGE STYLING
 }
 
 
-
-.categories{
-	min-height: 350px;
-	position: relative;
-}
-
-.categories h3{
-margin: 3px 0;}
-
-#thumimgA, #thumimgB, #thumimgC, #thumtextA, #thumtextB, #thumtextC{
-	position: absolute;
-	max-width: 100%;
-}
-
-#thumimgA, #thumimgB, #thumimgC {
-	z-index: 99;
-}
-
-#thumtextA, #thumtextB, #thumtextC{
-	z-index: 999;
-}
-
-.categories p{
-	padding: 20% 20px 0px 20px;
-	text-align: center;
-	font-weight: 400;
-}
-
-@media (max-width: 750px){
-	.categories p{
-	font-size:12 px;
-	}
-}
-@media (max-width: 550px){
-	.categories p{
-	font-size:18 px;
-	}
-}	
-
-
-
 /********************
 CLIENT APIS Rollover styling
 ********************/
 
 .categories-apis{
 	position: relative;
-	height: 350px;
+	height: 250px;
 	padding: 10px;
 	text-align: center;
 	font-weight: 400;
 }
 
-#matlabImg, #pyImg, #rImg, #matlabText, #pyText, #rText {
+#pythonapi-img, #matlabapi-img, #r-api-img, #pythonapi-text, #matlabapi-text, #r-api-text{
 	position: absolute;
 	max-width: 100%;
 }
 
-#matlabImg, #pyImg, #rImg {
+#pythonapi-img, #matlabapi-img, #r-api-img, {
 	z-index: 99;
 }
 
-#matlabText, #pyText, #rTextC{
+#pythonapi-text, #matlabapi-text, #r-api-text{
 	z-index: 999;
 }
 
-#matlabText, #pyText, #rText {
+
+#pythonapi-text, #matlabapi-text, #r-api-text{
 	padding: 20% 20px 0px 20px;
 	text-align: center;
 	font-weight: 400;
 }
 
-@media (max-width: 750px){
-	.categories-apis p{
-	font-size:12 px;
-	}
-}
-@media (max-width: 550px){
-	.categories-apis p{
-	font-size:18 px;
-	}
-}
-
-
-@media (min-width: 550px) {
-	.categories, .categories-apis{
-	    height: 200px;
-	    padding: 3px;
-	}
-	.categories-apis p{
-	   font-size: 11px;
-	   line-height: 13px;
-	}
-	.categories-apis h6{
-	   font-size: 13px;
-	   line-height: 15px;
-	}
-	
-}
-
-/* Larger than tablet */
-@media (min-width: 750px) {
-	.categories, .categories-apis{
-	    min-height: 250px;
-	    padding: 10px;
-	}
-	.categories-apis p{
-	   font-size: 12px;
-	   line-height: 14px;
-	}
-	.categories-apis h6{
-	   font-size: 18px;
-   	   line-height: 20px;
-	}
-}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {
-	.categories, .categories-apis{
-	height: 300px;
-	padding: 10px;
-	}
-	.categories-apis p{
-	font-size: 15px;
-	line-height: 21px;
-	}
 	.categories-apis h6{
 	font-size: 21px; 
 	line-height: 27px;
 	}
-}
 
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {
-	.categories, .categories-apis{
-	    height: 350px;
-	    padding: 10px;
-	}
-	.categories-apis p{
-	  font-size: 15px;
-	  line-height: 21px;
-	}
-	.categories-apis h6{
-	font-size: 21px; 
-	line-height: 27px;
-	}
-}
 /*************************
 POP-UP MENU STYLING
 **************************/
