--- a/css/state.css
+++ b/css/state.css
@@ -12,7 +12,11 @@
 	text-align: center;}
 .no_underline{
 	text-decoration: none;}
-
+.padding_left_small{
+    padding-left: 10px;}
+.padding_right_small{
+	padding-right: 10px;
+}
 .padding_left{
     padding-left: 70px;}
 .padding_right{
