--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -43,7 +43,7 @@
 		<div class="lang_nav_button-div"><a class="lang_nav_button {{ggplotclass}}" href="{{ site.baseurl }}/ggplot2{{page_type}}"><img src="{{ site.baseurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">GGPLOT2</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "plotly_js" %}
-		<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="{{ site.baseurl }}/plotly_js{{page_type}}">{ } pltoly.js</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="{{ site.baseurl }}/plotly_js{{page_type}}">{ } plotly.js</a></div>
 	{% endif %}
 {% endfor %}
 
