--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,6 +1,6 @@
 <div class="navigation-bar">
-<p class="align-left padding_left"><a href="{{ site.baseurl }}"> API Libraries / </a><a href="{{ site.baseurl }}/{{page.language}}">{{page.language | capitalize}}</a> / {{page.name}}</p>
-	<div class="float-right">
-		<a href="https://github.com/plotly">Fork on GitHub</a>
+<p class="align-left padding_left_small"><a href="{{ site.baseurl }}"> API Libraries / </a><a href="{{ site.baseurl }}/{{page.language}}">{% if page.language == "plotly_js" %}Plotly.js{% else %}{{page.language | capitalize}}{% endif %} / </a>{{page.name}}</p>
+	<div class="float-right padding_right_small">
+		<a id="forklink" href="https://github.com/plotly">Fork on GitHub</a>
 	</div>
 </div>
