navigation bar update

--- a/css/modules.css
+++ b/css/modules.css
@@ -174,8 +174,10 @@ NAVIGATION BAR STYLING
 	float: left;
 	color: #69738a;
 	}
-
+.nav-not-active{
+	color: #69738a;
 }
+
 @media (max-width: 400px) {
 	.navigation-bar p, .navigation-bar a {
 	    font-size: 12px;}
