--- a/css/modules.css
+++ b/css/modules.css
@@ -174,7 +174,7 @@ NAVIGATION BAR STYLING
 	float: left;
 	color: #69738a;
 	}
-.nav-not-active{
+#nav-not-active{
 	color: #69738a;
 }
 
@@ -441,7 +441,7 @@ CLIENT APIS Rollover styling
 
 .categories-apis{
 	position: relative;
-	height: 250px;
+	height: 120px;
 	padding: 10px;
 	text-align: center;
 	font-weight: 400;
