img hover update

--- a/css/modules.css
+++ b/css/modules.css
@@ -447,21 +447,21 @@ CLIENT APIS Rollover styling
 	font-weight: 400;
 }
 
-#pythonapi-img, #matlabapi-img, #r-api-img, #pythonapi-text, #matlabapi-text, #r-api-text{
+#pythonapi_img, #matlabapi_img, #r_api_img, #pythonapi_text, #matlabapi_text, #r_api_text{
 	position: absolute;
 	max-width: 100%;
 }
 
-#pythonapi-img, #matlabapi-img, #r-api-img, {
+#pythonapi_img, #matlabapi_img, #r_api_img, {
 	z-index: 99;
 }
 
-#pythonapi-text, #matlabapi-text, #r-api-text{
+#pythonapi_text, #matlabapi_text, #r_api_text{
 	z-index: 999;
 }
 
 
-#pythonapi-text, #matlabapi-text, #r-api-text{
+#pythonapi_text, #matlabapi_text, #r_api_text{
 	padding: 20% 20px 0px 20px;
 	text-align: center;
 	font-weight: 400;
