api hover update

--- a/css/modules.css
+++ b/css/modules.css
@@ -441,7 +441,7 @@ CLIENT APIS Rollover styling
 
 .categories-apis{
 	position: relative;
-	height: 120px;
+	height: 150px;
 	padding: 10px;
 	text-align: center;
 	font-weight: 400;
@@ -467,10 +467,81 @@ CLIENT APIS Rollover styling
 	font-weight: 400;
 }
 
+@media (max-width: 750px){
+	.categories-apis p{
+	font-size:12 px;
+	}
+}
+@media (max-width: 550px){
+	.categories-apis p{
+	font-size:18 px;
+	}
+}
+
+
+@media (min-width: 550px) {
+	.categories, .categories-apis{
+	    height: 60px;
+	    padding: 3px;
+	}
+	.categories-apis p{
+	   font-size: 11px;
+	   line-height: 13px;
+	}
+	.categories-apis h6{
+	   font-size: 13px;
+	   line-height: 15px;
+	}
+	
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+	.categories, .categories-apis{
+	    min-height: 80px;
+	    padding: 10px;
+	}
+	.categories-apis p{
+	   font-size: 12px;
+	   line-height: 14px;
+	}
+	.categories-apis h6{
+	   font-size: 18px;
+   	   line-height: 20px;
+	}
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+	.categories, .categories-apis{
+	height: 100px;
+	padding: 10px;
+	}
+	.categories-apis p{
+	font-size: 15px;
+	line-height: 21px;
+	}
 	.categories-apis h6{
 	font-size: 21px; 
 	line-height: 27px;
 	}
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
+	.categories, .categories-apis{
+	    height: 150px;
+	    padding: 10px;
+	}
+	.categories-apis p{
+	  font-size: 15px;
+	  line-height: 21px;
+	}
+	.categories-apis h6{
+	font-size: 21px; 
+	line-height: 27px;
+	}
+}
 
 /*************************
 POP-UP MENU STYLING
