getting started page

--- a/css/modules.css
+++ b/css/modules.css
@@ -449,7 +449,7 @@ CLIENT APIS Rollover styling
 
 #pythonapi_img, #matlabapi_img, #r_api_img, #pythonapi_text, #matlabapi_text, #r_api_text{
 	position: absolute;
-	max-width: 100%;
+	width: 100%;
 }
 
 #pythonapi_img, #matlabapi_img, #r_api_img, {
@@ -782,3 +782,24 @@ LANGUAGE INDEX PAGE STYLING
 	.three-column-clear{
 		clear: both;}
 }
+
+/***********************
+GETTING STARTTED STYLING
+***********************/
+.content-box{
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	background-color: #ffffff;
+	text-align: left;
+	
+}
+
+.content-box-two{
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	background-color: #edf1f8;
+	text-align: left;
+}
+
