getting started python

--- a/css/modules.css
+++ b/css/modules.css
@@ -442,7 +442,7 @@ CLIENT APIS Rollover styling
 .categories-apis{
 	position: relative;
 	height: 150px;
-	padding: 10px;
+	padding: 0px;
 	text-align: center;
 	font-weight: 400;
 }
@@ -462,10 +462,27 @@ CLIENT APIS Rollover styling
 
 
 #pythonapi_text, #matlabapi_text, #r_api_text{
-	padding: 20% 20px 0px 20px;
+	padding: 20px 0px;
 	text-align: center;
 	font-weight: 400;
 }
+
+.titlecenterapi{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 150px;
+  padding-right: 8px;
+  padding-left: 8px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.titlecenterapi h6{
+    margin-top: auto;
+	margin-bottom: auto;
+	}
+
 
 @media (max-width: 750px){
 	.categories-apis p{
@@ -492,6 +509,12 @@ CLIENT APIS Rollover styling
 	   font-size: 13px;
 	   line-height: 15px;
 	}
+	.titlecenterapi{
+	   height: 60px;
+	}
+	#pythonapi_text, #matlabapi_text, #r_api_text{
+	padding: 0px 0px;
+	}
 	
 }
 
@@ -509,6 +532,9 @@ CLIENT APIS Rollover styling
 	   font-size: 18px;
    	   line-height: 20px;
 	}
+	.titlecenterapi{
+	   height: 80px;
+	}
 }
 
 /* Larger than desktop */
@@ -525,6 +551,9 @@ CLIENT APIS Rollover styling
 	font-size: 21px; 
 	line-height: 27px;
 	}
+	.titlecenterapi{
+	   height: 100px;
+	}
 }
 
 /* Larger than Desktop HD */
@@ -540,6 +569,9 @@ CLIENT APIS Rollover styling
 	.categories-apis h6{
 	font-size: 21px; 
 	line-height: 27px;
+	}
+	.titlecenterapi{
+	   height: 150px;
 	}
 }
 
