getting started styling

--- a/css/layout_block.css
+++ b/css/layout_block.css
@@ -227,3 +227,15 @@ RESPONSIVE TABLE
 	}
 
 }
+
+/*****************************
+GETTING STARTED AREA
+*****************************/
+.getstartarea{
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.getstartarea .section{
+	margin: 21px 0px;
+}
