--- a/css/modules.css
+++ b/css/modules.css
@@ -816,15 +816,40 @@ LANGUAGE INDEX PAGE STYLING
 }
 
 /***********************
-GETTING STARTTED STYLING
+GETTING STARTED STYLING
 ***********************/
+
+.getstartarea h2{
+	color: #274478;
+	margin-bottom: 10.5px;
+	line-height: 1.5;
+	font-size: 30px;
+	
+}
+
 .content-box{
-	width: 100%;
-	padding: 10px;
+	max-width: 100%;
+	padding: 25px;
 	border: 1px solid #ccc;
 	background-color: #ffffff;
 	text-align: left;
 	
+}
+.content-box p{
+	margin-bottom: 0px;
+}
+
+.content-box code{
+	margin: 0px;
+}
+
+.content-box pre{
+	padding: 0px;
+	margin-bottom: 1em;
+}
+
+.content-box pre > code{
+	background: #edf1f8;
 }
 
 .content-box-two{
