--- a/css/state.css
+++ b/css/state.css
@@ -17,6 +17,8 @@
 .padding_right_small{
 	padding-right: 10px;
 }
+.no-padding{
+  padding: 0px;}
 .padding_left{
     padding-left: 70px;}
 .padding_right{
