--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -4,21 +4,22 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/api_docs.css">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.6/styles/default.min.css">
 	<script src="//cdn.jsdelivr.net/highlight.js/8.6/highlight.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 	<body>
     {% include header.html %}
 	{% include navigation-bar.html %}
 		
 	<div class="sectionseparator_bg">
 		<div class="container">
-			<h1 class="centered">{{page.name}} in {{page.language | capitalize}}</h1>
-			{% include lang-navigation.html %}
 			
 			<div class="row">
+			<div class="getstartarea">
 			
 			
 	
 			{{ content }}
 			
+			</div>
 			</div>
 		</div>
 	</div>
