--- a/css/modules.css
+++ b/css/modules.css
@@ -654,12 +654,14 @@ API SPLASH
 	background-position: center top;
 }
 .api-splash h1{
-	margin-top: 0px;
+	margin-top: 40px;
 	margin-bottom: 20px;
 	margin-left: 10px;
+	text-shadow: 1px 1px 10px #000;
 }
 .api-splash h4{
 	margin-left: 10px;
+	text-shadow: 1px 1px 10px #000;
 }
 .api-sect-padding{
 	padding-top: 40px;
@@ -669,30 +671,58 @@ API SPLASH
 /* Larger than mobile */
 @media (min-width: 400px) {
 	.api-splash{
-		height: 350px;
+		height: 300px;
 		}
 }
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {
 	.api-splash{
-		height: 400px;
+		height: 350px;
 		}
 }
 
 /* Larger than tablet */
 @media (min-width: 750px) {
 	.api-splash{
-		height: 500px;
+		height: 400px;
 		}
 }
 
 /* Larger than desktop */
 @media (min-width: 1000px) {
 	.api-splash{
-		height: 600px;
+		height: 500px;
 		}
 }
-
+.transbar{
+background-color: transparent;
+border: none;
+margin-top: 40px;
+margin-bottom: 30px;
+top:0;
+width: 100%;
+position: absolute;
+}
+.transbar-link{
+ color: #ffffff;
+ border: none;
+}
+.transbar-link:hover{
+color: #ffc938;
+border:none;
+}
+.is-fixed {
+    background-color: white;
+    border: 1px solid #e7e8e9;
+    color: #69738a;
+    height: 80px;
+    line-height: 80px;
+    position: fixed;
+    top: 0;
+    transition: background-color 0.4s linear 0s, border 0.4s linear 0s;
+    z-index: 99;
+	margin-top: 0px;
+}
 
 
 /**************
