menu img update

--- a/css/modules.css
+++ b/css/modules.css
@@ -445,6 +445,7 @@ CLIENT APIS Rollover styling
 	padding: 0px;
 	text-align: center;
 	font-weight: 400;
+	box-sizing: content-box;
 }
 
 #pythonapi_img, #matlabapi_img, #r_api_img, #pythonapi_text, #matlabapi_text, #r_api_text{
