--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -1,5 +1,8 @@
 <div class="lang_nav row">
 {% assign page_type  = page.permalink | remove_first: page.language %}
+{% if page.permalink contains "javascript-graphing-library" %}
+	{% assign page_type  = page.permalink | remove_first: "javascript-graphing-library" %}
+{% endif %}
 
 {% if page.language == "python" %}
 	{% assign pyclass = "lang_nav_act" %}
