--- a/css/api_docs.css
+++ b/css/api_docs.css
@@ -1,7 +1,9 @@
+/*
 .thumbnail{
     width: 100%;
     max-width: 230px;
     height: 200px;}
+	*/
 
 .z-depth-1{
 /*box-shadow: inset 0px 0px 1em rgba(204, 204, 204, 0.5); */
@@ -23,10 +25,6 @@ iframe{
 	
 .border{
 	border: 1px solid #ccc;}
-
-.container-big{
-  max-width: 1200px;
-  width: 95%;}
   
 .auto-eg-padding{
 	padding-top: 20px;
