minor styling edits

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,11 +12,17 @@
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/layout_block.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/modules.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/state.css">
-  
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/api_docs.css">
+
 	<!-- Icon -->
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/plotly-ico.png" type="image/x-icon" />
 	 
 	<!-- META TAGS -->
 	{% include seo.html %}
+	
+	<!-- code highlighting -->
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.6/styles/default.min.css">
+	<script src="//cdn.jsdelivr.net/highlight.js/8.6/highlight.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 
 	</head>
