--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="{% if page.imageurl %}{{page.imageurl}}{% else %}http://help.plot.ly/images/twitter-default.png{% endif %}">
     <meta property="og:description" content="{% if page.description %}{{page.description}}{% else %}Plotly is the easiest way to graph and share your data.{% endif %}"/>
-    <meta property="og:url"
+    <meta property="og:url" />
     <meta property="fb:admins" content="1123751525"/>
     <meta property="fb:admins" content="22418"/>
 
