--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -32,7 +32,7 @@
 			{% if page.display_as == "chart_type" %}
 							<a href="{{ site.baseurl }}/{{page.permalink}}">
 									<div class="alltutcol">
-										<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
+										<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 										<div class="titlecenter">
 													<h5 class="centered"> {{page.name}} </h5>
 										</div>
@@ -51,7 +51,7 @@
 				{% if page.display_as == "multiple_axes" %}
 						<a href="{{ site.baseurl }}/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
+								<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
@@ -69,7 +69,7 @@
 				{% if page.display_as == "streaming" %}
 						<a href="{{ site.baseurl }}/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" src="{{ site.baseurl }}{{page.thumbnail}}" >
+								<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
@@ -90,7 +90,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "layout_opt" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -102,7 +102,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "file_settings" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -114,7 +114,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "tutorial" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -126,7 +126,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.display_as == "showcase" %}
-						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
@@ -138,7 +138,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "callbacks" %}
-					<li class="no-list-style"><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+					<li class="no-list-style"><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			</ul>
 			{% endfor %}
@@ -150,7 +150,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.display_as == "get_request" %}
-						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}<a></li>
+						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
